# mageslam

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  console.cpp
Apps/: CMakeLists.txt
Apps/mageslam_c_api/: CMakeLists.txt
Apps/mageslam_c_api/Include/: mageslam_c_api.h
Apps/mageslam_c_api/Source/: callback.js  mageslam_c_api.cpp  test.cpp
Apps/minimal/: CMakeLists.txt  minimal.cpp
Dependencies/: CMakeLists.txt
Dependencies/Arcana/: Arcana.md  CMakeLists.txt
Dependencies/Arcana/Android/: Arcana.Android.vcxproj
Dependencies/Arcana/QDSP/: Arcana.QDSP.Reference.vcxitems  Arcana.QDSP.vcxproj  packages.config
Dependencies/Arcana/QDSP.Test/: Arcana.QDSP.Test.vcxproj  packages.config
Dependencies/Arcana/Shared/: Arcana.vcxitems
Dependencies/Arcana/Shared.Test/: AlgorithmUnitTest.cpp  Arcana.Test.vcxitems  EitherUnitTest.cpp  ExpectedUnitTest.cpp  InplaceFunctionUnitTest.cpp  RefcountTest.cpp  TypeTraitsTest.cpp
Dependencies/Arcana/Shared.Test/Containers/: ContainerUnitTest.cpp
Dependencies/Arcana/Shared.Test/Messaging/: MediatorUnitTest.cpp
Dependencies/Arcana/Shared.Test/Scheduling/: SchedulingUnitTest.cpp
Dependencies/Arcana/Shared.Test/Threading/: DispatcherUnitTest.cpp
Dependencies/Arcana/Shared/arcana/: either.h  errors.cpp  errors.h  exceptions.h  expected.h  finally_scope.h  function_view.h  iterators.h  math.h  mixin_ptr.h  path.h  propertybag.h  reference_counter.h  sentry.h  string.h  timer.h  type_traits.h
Dependencies/Arcana/Shared/arcana/analysis/: Determinator.cpp  binary_iterator.h  crc32.cpp  crc32.h  data_point.h  determinator.h  introspector.h  object_trace.cpp  object_trace.h  sha1.cpp  sha1.h  xray.cpp  xray.h
Dependencies/Arcana/Shared/arcana/bob/: bob.h  bob_data.h  bob_entry_writer.h  bob_helpers.h  bob_reader.cpp  bob_reader.h  bob_stream_file.h  bob_writer.h
Dependencies/Arcana/Shared/arcana/containers/: index_pool.h  sorted_vector.h  ticketed_collection.h  unique_vector.h
Dependencies/Arcana/Shared/arcana/experimental/: array.h
Dependencies/Arcana/Shared/arcana/messaging/: mediator.h
Dependencies/Arcana/UWP/: Arcana.UWP.Reference.vcxitems  Arcana.UWP.vcxproj  packages.config
Dependencies/Arcana/UWP.Test/: Arcana.UWP.Test.vcxproj  packages.config
Dependencies/Arcana/UWP.Test/Bob/: TestBob.cpp
Dependencies/BoostHeaders/: CMakeLists.txt
Dependencies/BoostHeaders/Include/boost/: crc.hpp
Dependencies/BundlerLib/: CMakeLists.txt
Dependencies/BundlerLib/Include/: BundlerLib.h  PoseGraphOptimizer.h
Dependencies/BundlerLib/Source/: BundlerLib.cpp  PoseGraphOptimizer.cpp
Dependencies/FuserLib/: AnalogConversions.h  CMakeLists.txt  LegacySerialization.h  SensorFilter.cpp  SensorFilter.h  SensorSample.cpp  SensorSample.h  SensorSampleQueue.cpp  SimpleIMUFilter.cpp  SimpleIMUFilter.h
Dependencies/FuserLib/Include/: FuserLib.h  SensorFilter.h  SensorSample.h  SensorSampleQueue.h  SensorSampleSerializable.h  TimeUnits.h
Dependencies/FuserLib/Source/: LegacySerialization.cpp  SensorSample.cpp
Dependencies/Platform/: CMakeLists.txt
Dependencies/Platform/Plat/: MiraAssert.h  TimeDefinitions.h
Dependencies/Platform/Plat/CameraDevice/: CameraSettings.h
Dependencies/Platform/Plat/Device/: Device.h  SystemProperties.h
Dependencies/Platform/Plat/Telemetry/: TimingTelemetryService.cpp  TimingTelemetryService.h
Dependencies/Platform/Plat/Tracing/: LifetimeManagerLoggerImpl.cpp  LifetimeManagerLoggerImpl.h  MiraTraceLoggerImpl.cpp  MiraTraceLoggerImpl.h  ScanTelemetryLoggerImpl.cpp  ScanTelemetryLoggerImpl.h  ScanTraceLoggerImpl.cpp  ScanTraceLoggerImpl.h  ScopeTimer.h  TelemetryKeywords.h  Tracing.h
Dependencies/Tracing/: CMakeLists.txt
Dependencies/Tracing/etw/: MIraBVTPowerTrace.wprp  Tracelogger.wprp
Dependencies/Tracing/include/: BaseScopeTimer.h  FallbackLogger.h  RuntimeTracking.h  TimedEvent.h  TraceConstants.h  TraceLogger.h
Dependencies/Tracing/include/mock/: TraceLoggerImpl.h
Dependencies/Tracing/include/winrt/: TraceLoggerImpl.h
(+266 files in other folders)
